--- a/public/index.html
+++ b/public/index.html
@@ -11,16 +11,25 @@
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/iprintlogo.jpeg" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-  <!-- Google Fonts -->
+  <!-- Preload LCP image (splash/logo) for faster first paint -->
+  <link rel="preload" href="%PUBLIC_URL%/iprintlogo.jpeg" as="image" />
+
+  <!-- Google Fonts - display=swap avoids invisible text while loading -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link
     href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;700&family=Noto+Sans:wght@400;500;700&display=swap"
     rel="stylesheet" />
 
-  <!-- Material Symbols -->
-  <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&display=swap"
-    rel="stylesheet" />
+  <!-- Material Symbols - load async so it doesn't block first paint -->
+  <link
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&display=swap"
+    rel="stylesheet"
+    media="print"
+    onload="this.media='all'" />
+  <noscript>
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&display=swap" rel="stylesheet" />
+  </noscript>
 
   <title>iprint - 3D Home Experience</title>
 </head>
